--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
     <body>
         <h1>Essai de modification par MorganeFa</h1>
     <p>&nbsp;</p>
-        <p>salut c rinor <p/>
+    <p>salut c rinor </p>
     <div class="container">
     <div class="row">
     <div class="col">
